--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>在庫管理 | ダッシュボード</title>
+  <link rel="icon" href="assets/tsh.png">
   <!-- Lib eksternal yang kamu pakai -->
   <script defer src="https://unpkg.com/html5-qrcode"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
@@ -95,7 +96,7 @@
   <header class="topbar" id="topbar">
     <button class="icon-btn" id="btnSidebar" aria-label="メニュー">☰</button>
     <a class="brand" href="#dashboard">
-      <div class="brand-logo">IC</div>
+      <div class="brand-logo"><link rel="icon" href="assets/tsh.png"></div>
       <span class="brand-name">Inventory Control</span>
     </a>
     <nav class="top-actions">
