--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html lang="ja">
 <head>
+  <!-- Favicon -->
+<link rel="icon" type="image/png" href="./tsh.png" sizes="32x32">
+<link rel="apple-touch-icon" href="./tsh.png">
+<!-- fallback inline (kalau png belum ada) -->
+<link rel="icon" type="image/svg+xml"
+      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect rx='12' width='64' height='64' fill='%236d79ff'/%3E%3Ctext x='50%25' y='56%25' text-anchor='middle' font-size='34' font-family='Arial' fill='white'%3EIC%3C/text%3E%3C/svg%3E">
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>在庫管理 | ダッシュボード</title>
